# DeepAssembly

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/orchestrator/: main.py  requirements.txt
backend/orchestrator/app/api/: routes.py
backend/orchestrator/app/core/: conductor.py
backend/pl-engine/: CMakeLists.txt
backend/pl-engine/src/: analyzer.h
frontend/: package.json
frontend/src/components/: CodeEditor.tsx
frontend/src/pages/: index.tsx
scripts/: setup.sh
